--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=springboot
+
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.com.springboot=DEBUG
+
+logging.file.name=logs/desafio-itau.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+logging.file.max-size=10MB
+logging.file.max-history=7
