--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} 
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
 logging.file.max-size=10MB
 logging.file.max-history=7
+
+# Expõe o endpoint de health (e opcionalmente outros)
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
