Documentacao da API com Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ logging.file.max-history=7
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 management.endpoint.health.show-components=always
+
+# Configurações do Springdoc OpenAPI
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.packagesToScan=itau.backend.springboot.controller
+springdoc.show-actuator=true
